# webrtc_ros_bridge

./: .gitignore
webrtc-ros-bridge/: go.mod  main.go
webrtc-ros-bridge/signaling_channel/: signaling_channel.go
webrtc_ros/: .gitignore  CMakeLists.txt  package.xml
webrtc_ros/include/webrtc_ros/: configure_message.h  cv_mat_sensor_msgs_image_type_adapter.hpp  ice_candidate_message.h  image_transport_factory.h  ros_video_capturer.h  ros_video_renderer.h  sdp_message.h  visibility_control.h  webrtc_client.h  webrtc_ros_json_parser.h  webrtc_ros_message.h  webrtc_ros_server.h  webrtc_web_server.h
webrtc_ros/src/: burger.cpp  burger.hpp  cam2image.cpp  configure_message.cpp  cv_mat_sensor_msgs_image_type_adapter.cpp  ice_candidate_message.cpp  image_transport_factory.cpp  policy_maps.hpp  ros_video_capturer.cpp  ros_video_renderer.cpp  sdp_message.cpp  webrtc_client.cpp  webrtc_ros_client_node.cpp  webrtc_ros_json_parser.cpp  webrtc_ros_message.cpp  webrtc_ros_server.cpp  webrtc_ros_server_node.cpp  webrtc_ros_server_nodelet.cpp  webrtc_web_server.cpp
webrtc_ros/web/: index.html  index.js  viewer.html  viewer.js  webrtc_ros.js
